# ezoidc

./: .gitignore  .ko.yaml  Makefile  README.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: chart.yml  ci.yml  e2e.yml  ko.yml  pypi.yml
.regal/: config.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
cmd/ezoidc/: main.go
cmd/ezoidc-server/: main.go
e2e/: aws.go  dagger.json  go.mod  go.sum  issuer.go  k8s.go  local.go  main.go  ssh.go  test.go
ko/: cli  server
pkg/client/: http.go
pkg/engine/: builtins.go  engine.go  engine_test.go  ezoidc.rego
pkg/engine/builtins/: init.go  kubernetes_service_account_token.go  ssh_certificate.go  totp_verify.go
pkg/models/: api.go  configuration.go  configuration_test.go  issuer.go  issuer_test.go  json.go  variable.go  variable_test.go
pkg/models/testdata/: empty.yaml  sample.yaml
pkg/providers/: aws_ssm.go  env.go  file.go  kubernetes.go  kubernetes_secrets.go  resolver.go  resolver_test.go  string.go
pkg/server/: api.go  api_test.go  auth.go  auth_test.go
pkg/static/: build.go
sdk/python/: README.md  example.py  pyproject.toml
sdk/python/src/ezoidc/api/v1/: client.py  models.py
sdk/python/tests/: test_client.py
